fixes on mobile and for scroll

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,6 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   width: 100%;
 }
+
 .image-container {
   width: 100%;
 }
@@ -16,6 +17,7 @@ body {
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 85vh, 50% 95vh, 0 85vh);
 }
+
 .home-hero-text {
   text-align: center;
   position: absolute;
@@ -24,46 +26,72 @@ body {
   transform: translate(-50%, -50%);
   color: white;
   margin-top: 20px;
+  @media only screen and (max-width: 768px) {
+    margin-top: 2.5rem;
+  }
 }
+
 .see-work-btn {
   color: black;
   background-color: white;
   margin-top: 15px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
+
 .see-work-btn:hover {
   background-color: black;
   color: white;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
 }
+
 .see-work-btn:hover .nav-link {
   color: white;
 }
+
 .lorem-ipsum {
   padding: 45px;
 }
+
 .white-btn {
   color: black;
   background-color: white;
 }
+
 .project-section {
-  margin-top: 50px;
-  padding: 16px;
+  margin-top: 3rem;
+  padding: 1rem 3rem;
+  @media only screen and (max-width: 768px) {
+    margin-top: 2rem;
+    padding: 1rem 1rem;
+  }
+}
+
+.project-section-title {
+  @media only screen and (max-width: 768px) {
+    text-align: center;
+  }
 }
 
 .card-img-top {
   width: 100%;
 }
+
 .card {
-  margin: 35px;
-  padding: 25px;
+  margin: 2rem 1rem;
+  // padding: 25px;
   background-image: linear-gradient(to right bottom, #cfcdcd, #ebd8d8, #cfcdcd);
   border: none;
   box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.2);
 }
+
 .card-body {
   padding-top: 1.25rem;
+  @media only screen and (max-width: 768px) {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
+
 .card:hover {
   background-image: linear-gradient(to right bottom, #cfcdcd, #c0cfcd, #cfcdcd);
   background-color: rgba(104, 162, 153, 0.5);
@@ -71,16 +99,20 @@ body {
   transform: translateY(4px);
   transition: all 0.3s;
 }
+
 .card:hover .seafoam-btn {
   background-color: white;
   color: #686868;
 }
+
 .card-title {
   font-weight: 600;
 }
+
 .seafoam-btn {
   background-color: rgba(104, 162, 153, 0.5);
 }
+
 .coming-soon {
   font-family: "Permanent Marker", cursive;
   color: #99463d;
