--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,175 +1,195 @@
 /*
     General Styles
 */
+
 body {
-    font-family: 'Roboto', sans-serif;
-    // display: flex;
-    // flex-direction: column;
+  font-family: "Roboto", sans-serif;
 }
+
 h1 {
-    font-size: 3rem;
-    font-weight: bold;
-}   
+  font-size: 3rem;
+  font-weight: bold;
+  @media only screen and (max-width: 768px) {
+    font-size: 2.5rem;
+  }
+}
 
 /* -------------- Navbar ------------- */
 
 @media only screen and (max-width: 768px) {
-    // #navbar-sm {
-    //     top: 20px;
-    // }
-    .right-column-mobile {
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
-
-.navbar-transparent{
-    background-color: transparent;
-}
-
-.navbar-white{
+  .right-column-mobile {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .navbar-transparent {
     background-color: white;
+  }
+  .navbar-white {
+    background-color: white;
+  }
 }
+
+// Toggles with page scroll
+
+.navbar-transparent {
+  background-color: transparent;
+}
+
+.navbar-white {
+  background-color: white;
+}
+
+//
 
 .navbar-brand {
-    color: black;
+  color: black;
 }
 
 .navbar-h1 {
-    text-decoration: none;
-    line-height: 3rem;
-    font-weight: bold;
-    font-size: 3.5rem;
+  text-decoration: none;
+  line-height: 3rem;
+  font-weight: bold;
+  font-size: 3.5rem;
+  @media only screen and (max-width: 768px) {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
 }
 
 .semi-trans-white-btn {
-    margin-left: 10px;
-    margin-right: 10px;
-    background: rgba(255,255,255,0.5);
-    border: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
+  margin-left: 10px;
+  margin-right: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  border: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
 }
 
 .nav-item {
-    text-align: right;
+  text-align: right;
 }
 
 /* -------------- Home page ------------- */
 
 .nav-link {
-    padding: 0;
-    color: black;
+  padding: 0;
+  color: black;
 }
 .nav-link:hover {
-    color: white;
+  color: white;
 }
 
 /* -------------- Footer ------------- */
 
 .footer {
-    background-color: #68a299;
-    margin-top: 15px;
-    // position: fixed;
-    // left: 0;
-    // bottom: 0;
-    // width: 100%;
+  background-color: #68a299;
+  margin-top: 15px;
 }
+
 .footer-p {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 16px;
-    margin: 0;
-    font-size: 1.5rem;
-    display: inline;
-    color: white;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 16px;
+  margin: 0;
+  font-size: 1.5rem;
+  display: inline;
+  color: white;
 }
+
 .footer-link {
-    color: black;
+  color: black;
 }
+
 .footer-icon {
-    font-size: 2rem;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: white;
+  font-size: 2rem;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: white;
 }
+
 .footer-icon:hover {
-    color: black;
+  color: black;
 }
 
 /* -------------- About ------------- */
 
 @media only screen and (max-width: 768px) {
-    .right-column {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .about-text {
-        padding-top: 15px;
-    }
+  .right-column {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .about-text {
+    padding-top: 15px;
+  }
 }
 
 @media only screen and (min-width: 769px) {
-    .right-column {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
+  .right-column {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 }
 
 .about-container {
-    margin-top: 75px;
-    margin-bottom: 50px;
-    background-color: #cfe6e3;
-    padding-top: 75px;
-    padding-bottom: 40px;
+  margin-top: 75px;
+  margin-bottom: 50px;
+  background-color: #cfe6e3;
+  padding-top: 75px;
+  padding-bottom: 40px;
 }
-.about-row-1, .about-row-2, .about-row-3, .about-row-4, .about-row-5, .about-row-6, .about-row-7 {
-    margin-right: 30px;
-    margin-left: 30px;
-    // margin-bottom: 20px;
+
+.about-row-1,
+.about-row-2,
+.about-row-3,
+.about-row-4,
+.about-row-5,
+.about-row-6,
+.about-row-7 {
+  margin-right: 30px;
+  margin-left: 30px;
 }
+
 .about-row-1 {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
+
 .about-row-2 {
-    margin-bottom: 7px;
+  margin-bottom: 7px;
 }
-.about-row-3{
-    margin-bottom: 40px;
+
+.about-row-3 {
+  margin-bottom: 40px;
 }
-.about-row-4{
-    margin-bottom: 7px;
+
+.about-row-4 {
+  margin-bottom: 7px;
 }
-.about-row-5{
-    margin-bottom: 40px;
+.about-row-5 {
+  margin-bottom: 40px;
 }
-.about-row-6{
-    margin-bottom: 7px;
+
+.about-row-6 {
+  margin-bottom: 7px;
 }
-// .badge-col{
-//     padding-left: 0;
-//     padding-right: 0;
-// }
+
 .rebeccaheadshot {
-    margin-left: 16px;
-    margin-right: 16px;
-    object-fit: cover;
+  margin-left: 16px;
+  margin-right: 16px;
+  object-fit: cover;
 }
-// .right-column {
-//     padding-left: 50px;
-//     padding-right: 50px;
-// }
+
 .badge {
-    font-size: 16px;
-    margin: 5px;
+  font-size: 16px;
+  margin: 5px;
 }
+
 .skill-badge {
-    display: inline-block;
+  display: inline-block;
 }
 
 /* -------------- Contact ------------- */
 
 .contact-container {
-    padding-top: 50px;
-    padding-bottom: 70px;
+  padding-top: 50px;
+  padding-bottom: 70px;
 }
